# CUTnTag_antibody_table

./: CLAUDE.html  CLAUDE.md  PROJECT_PLAN.md  README.md  config.yaml  main.py  pyproject.toml  ui_mockup.html
.claude/: settings.local.json
docker/: Dockerfile
src/cutntagtable/: config.py  io.py  main.py  models.py  validation.py
static/: app.js  index.html  style.css
tests/: test_io.py  test_validation.py
tests/fixtures/: sample_list.txt
